# inertion

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  test.cpp  test_eigen.cpp
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  inertia_8h.html  inertia_8h.js  inertia_8h_source.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_2.js  files_0.js  functions_0.js  functions_1.js  searchdata.js
docs/latex/: files.tex  inertia_8h.tex  inertia_8h_source.tex  refman.tex
src/: inertia.cpp  inertia.h  main.cpp  visualize.cpp
tests/: test_main.cpp
